<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    >



        <TextView
            android:id="@+id/ed_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:text="@string/user_name_hint"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tx_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ID_hint"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_marginTop="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tx_c_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/ed_newPss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_reNewPss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password_hint"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_ch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:text="@string/save_change" />



</LinearLayout>