<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/myroot"
    android:orientation="vertical"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <EditText
            android:id="@+id/editTextLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/broadcast_title_hint"
            android:inputType="textPersonName"
            android:paddingTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Broadcast Type"
            android:inputType="textPersonName"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/content_hint"
            android:inputType="textPersonName"
            android:paddingTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minEms="10"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:paddingTop="30dp" />
        <Button
            android:id="@+id/dateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="@color/colorPrimaryDark"
            android:text="T" />

    </LinearLayout>

    <Button
        android:id="@+id/insert_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_broadcast"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="40dp"
        />


</LinearLayout>