<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.musab.mcit.mFragment.AboutApp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@mipmap/ic_launcher"
            android:text="@string/app_name"
            android:textColor="@android:color/background_light"
            android:textSize="40dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@android:color/background_light"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/version"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txVr_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="1.0"
            android:textStyle="bold"
            android:textColor="@android:color/background_light"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:freezesText="false"
        android:keepScreenOn="false"
        android:text="@string/contact_developer"
        android:textColor="@android:color/background_light"
        android:textSize="20dp"
        android:textStyle="bold" />

</FrameLayout>
